# boldt-embed-de

./: .gitignore  AUDIT.md  AUTORESEARCH.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  embed_test.md  prompts.md  pyproject.toml
.claude/: settings.json
benchmarks/: baselines.json  classification_de.jsonl  clustering_de.jsonl  crosslingual_deen.json  mteb_german_tasks.json  rag_de.json  report_template.md  stress_cases_de.jsonl  stress_de.json  sts_de.jsonl  toy_de_retrieval.json
configs/: baseline_models.json  data_sources.json  data_sources_v2.json  data_sources_v3.json  evaluation.json  student_training_2026.json  teacher_models.json  training_bidirectional.json  training_causal.json  training_reranker.json  v5_small_model_candidates.json
docs/: ARCHITECTURE_PLAN.md  BENCHMARK_PLAN.md  DATA_PLAN.md  RESEARCH_NOTES_2026.md  SYNTHETIC_PAIRS.md  VALIDATION_POLICY.md  autoresearch-controller-2026.md  autoresearch-implementation-plan-2026.md  autoresearch-runbook-v8.md  baseline-benchmarking.md  benchmark-report.md  bidirectional-adaptation.md  bounded-policy-v1.md  bounded-rerank-policy.md  conservative-reranker-training.md  dense-recall-gate.md  domain-quality-gates.md  experiment-registry.md  final-review.md  first-stage-recall-audit.md  hard-negative-mining-2026.md  hardness-aware-rag-eval.md  hybrid-retrieval-eval.md  modern-embedding-training.md  near-ceiling-guardrails.md  policy-promotion-gate.md  policy-reranker-serving.md  rag-candidate-lists.md  rag-eval-schema.md  rag-reranker-eval.md  rag-teacher-scoring.md  rerank-or-abstain.md  (+29 more)
(+948 files in other folders)
